# mafia-night

./: .bazelrc  .env.production.example  .envrc  .gitignore  BAZEL_NIXOS_SUMMARY.md  BUILD.bazel  DEPLOYMENT.md  Justfile  LICENSE  MIGRATION_TO_NIX_FLAKES.md  MODULE.bazel  NIXOS_BAZEL_FIX.md  PHASE1_SUMMARY.md  PROJECT_PHASES.md  README.md  SSL_SETUP.md  WORKSPACE  docker-compose.prod.yml  docker-compose.yml  flake.nix  shell.nix
.github/workflows/: backend.yml  ci.yml  deploy.yml  frontend.yml
backend/: BUILD.bazel  Dockerfile  TESTING.md  go.mod  go.sum
backend/cmd/api/: BUILD.bazel  main.go  main_test.go
backend/ent/: admin.go  admin_create.go  admin_delete.go  admin_query.go  admin_update.go  client.go  ent.go  game.go  game_create.go  game_delete.go  game_query.go  game_update.go  gamerole.go  gamerole_create.go  gamerole_delete.go  gamerole_query.go  gamerole_update.go  mutation.go  player.go  player_create.go  player_delete.go  player_query.go  player_update.go  role.go  role_create.go  role_delete.go  role_query.go  role_update.go  roletemplate.go  roletemplate_create.go  roletemplate_delete.go  (+9 more)
docs/: API_INTEGRATION.md  ATOMIC_NOTES_SUMMARY.md  BAZEL_NIXOS_COMPLETE.md  CORS_SETUP.md  GITHUB_ACTIONS_SETUP.md  NIX_FLAKES_GUIDE.md  ORGANIZATION_SUMMARY.md  README.md  README_NIXOS.md  SHELL_NIX_EXPLAINED.md  Video-Optimization-Techniques.md
frontend/: Dockerfile  Dockerfile.prod  jest.config.js  package-lock.json  package.json  playwright-env.sh  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.json
nginx/: nginx-http-only.conf  nginx-https.conf  nginx.conf
scripts/: bazel-nix.sh  setup-nixos.sh  test-watch.sh
(+216 files in other folders)
