module(
    name = "mafia_night",
    version = "0.1.0",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Setup Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# Setup Gazelle
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//backend:go.mod")
use_repo(
    go_deps,
)

# Node.js rules
bazel_dep(name = "aspect_rules_js", version = "2.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.2.1")
bazel_dep(name = "aspect_rules_jest", version = "0.22.0")

# Node.js toolchain
node = use_extension("@aspect_rules_js//js:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "20.11.1")
