load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/mafia-night/backend/cmd/api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = ["main_test.go"],
    embed = [":api_lib"],
)
